# rush

./: .gitignore  Cargo.toml  README.md  tests.sh
.github/workflows/: actions.yaml
docs/: TODO.md  bash-builtins.md  escape character.md  quoting.md  reserved words.md  token recognition.md
src/: main.rs  prompt2.rs
src/config/: globals.rs  mod.rs
src/executer/: mod.rs
src/globals/: mod.rs
src/libc_bindings/: mod.rs
src/prompt/: mod.rs
src/signals/: mod.rs
src/util/: basename.rs  cd.rs  dirname.rs  exec.rs  exit.rs  mod.rs  pwd.rs
tests/: test_tokenizer.rs
