# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "rush"
version = "0.1.0"
authors = ["luchev <luchevz@gmail.com>"]
edition = "2018"

[dependencies]
conch-parser = "0.1.1"
regex = "1.4.2"

[dev-dependencies]
pretty_assertions = "0.6.1"
